fix <kbd> and <code> overlapping when placed in heading elements

--- a/src/styles/post-body.scss
+++ b/src/styles/post-body.scss
@@ -180,6 +180,25 @@
 		border-radius: 0.25em;
 		box-shadow: var(--shadow_sticker);
 	}
+
+	// <code> and <kbd> styling will overlap other lines in header elements
+	// because their containers expand past the available line-height.
+	// - `display: inline-flex` forces the line to expand to fit these elements.
+	//   while centering its contents (`align-items: center`)
+	// - albeit with the caveat of not being able to wrap its contents between lines
+	h1, h2, h3, h4, h5, h6 {
+		code {
+			display: inline-flex;
+			height: calc(1.2em + 0.15em);
+			align-items: center;
+		}
+
+		kbd {
+			display: inline-flex;
+			height: calc(1.2em + 2*0.15em);
+			align-items: center;
+		}
+	}
 }
 
 @import "src/styles/markdown/blockquote";
